kubernetes/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-raphael
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: mqtt
      port: 1883
      targetPort: 1883
    - protocol: TCP
      name: websocket
      port: 8083
      targetPort: 8083
  selector:
    app: mosquitto-raphael
