kubernetes/mosquitto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mqtt-ingress
spec:
  rules:
    - host: mosquitto-raphael.1thahhsghj4d.eu-de.codeengine.appdomain.cloud
      http:
        paths:
          -   backend:
              service:
                name: websockets
                port:
                  number: 8083
